[gd_scene load_steps=12 format=3 uid="uid://b33twxhxieuyx"]

[ext_resource type="Script" path="res://Enemies/Enemy.gd" id="1_sqncy"]
[ext_resource type="Texture2D" uid="uid://da1c6bjxksh80" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_0.png" id="2_s6f5f"]
[ext_resource type="Texture2D" uid="uid://dg5ok7ykv5uxc" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_1.png" id="3_i24vl"]
[ext_resource type="Texture2D" uid="uid://c3dvyvxo25ylf" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_2.png" id="4_48na2"]
[ext_resource type="Texture2D" uid="uid://bx2adgou0bcub" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_3.png" id="5_y8ygt"]
[ext_resource type="Texture2D" uid="uid://da6l8863p60bw" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_4.png" id="6_eitvd"]
[ext_resource type="Texture2D" uid="uid://b1pb0gufpw3jl" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_5.png" id="7_msxit"]
[ext_resource type="Texture2D" uid="uid://ct7mk6xb32ev6" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_6.png" id="8_nklsb"]
[ext_resource type="Texture2D" uid="uid://ca2vr2kgt32d7" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_7.png" id="9_oeidf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1poad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s6f5f")
}, {
"duration": 1.0,
"texture": ExtResource("3_i24vl")
}, {
"duration": 1.0,
"texture": ExtResource("4_48na2")
}, {
"duration": 1.0,
"texture": ExtResource("5_y8ygt")
}, {
"duration": 1.0,
"texture": ExtResource("6_eitvd")
}, {
"duration": 1.0,
"texture": ExtResource("7_msxit")
}, {
"duration": 1.0,
"texture": ExtResource("8_nklsb")
}, {
"duration": 1.0,
"texture": ExtResource("9_oeidf")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q0t71"]
radius = 197.5
height = 615.0

[node name="Enemy" type="Area2D"]
scale = Vector2(0.12, 0.12)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_sqncy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.66663, -124.333)
sprite_frames = SubResource("SpriteFrames_1poad")
animation = &"walk"
offset = Vector2(0, -345)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -1.83325)
shape = SubResource("CapsuleShape2D_q0t71")

[node name="TargetChange" type="Timer" parent="."]
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TargetChange" to="." method="_on_target_change_timeout"]
